--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -26,6 +27,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    buildFeatures{
+        viewBinding true
     }
 
     applicationVariants.all { variant ->
@@ -59,6 +64,11 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+    maven {
+
+        url  "http://dl.bintray.com/lukaville/maven"
+
+    }
     mavenCentral()
 }
 
@@ -78,6 +88,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'net.gotev:uploadservice:2.1'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.nbsp:materialfilepicker:1.9.1'
 
     implementation 'com.github.karanchuri:PermissionManager:0.1.0'
 //    implementation 'id.zelory:compressor:2.1.0'
